added query get endpoint
